added scraper repo to about

--- a/about.html
+++ b/about.html
@@ -380,6 +380,7 @@ summary {
 <p>Additionally, for the New York Times, I can use the newyorktimes package and the article search API to search for article metadata.</p>
 <p>I also found an api called the news api which I can use to scrape multiple news sites. This is however a little fiddly which I am still trying to figure out. Currently, I have to manually change the page variable to scrape each page of results but I am trying to figure out how to automate this. Also I have to be careful not to get blocked from these sites by perhaps putting a wait on the scraper to slow it down.</p>
 <p>With the data, I can then turn the data into csvs to be cleaned. I have thus far scraped the 100 most recent BBC articles and have cleaned it in gather.rmd as an example.</p>
+<p>My data collection code and scrapers can be found in this repo: <a href="https://github.com/amyzhou9/gov1005-data" class="uri">https://github.com/amyzhou9/gov1005-data</a></p>
 </div>
 <div id="about-the-author" class="section level2">
 <h2>About the Author</h2>
